force-app/main/default/objects/Campaign_Member_Host__c/Campaign_Member_Host__c.object-meta.xml
<CustomObject>
    <description>Case#1168 - 11/2011 - Rudolf Niehaus
The object forms a link between Campaign, Campaign members and Bank Contacts (Hosts). Objects gets populated, updated and deleted by the CampaignMemebers trigger</description>
    <label>Campaign Member Host</label>
    <nameField>
        <displayFormat>MEMHOST-{0000}</displayFormat>
        <label>Campaign Member Host Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Campaign Member Hosts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>