force-app/main/default/objects/Campaign_Member_Host__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <description>Case#1168 - 11/2011 - Rudolf Niehaus
Mast-detail relation ship to Campaign</description>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Campaign Member Hosts</relationshipLabel>
    <relationshipName>Campaign_Member_Hosts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>