force-app/main/default/objects/Campaign_Member_Host__c/fields/Campaign_Wave__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Wave__c</fullName>
    <description>Case# 1168 - 12/2011 - Rudolf Niehaus
Invitation wave when the member was added</description>
    <label>Campaign Wave</label>
    <length>3</length>
    <type>Text</type>
</CustomField>