force-app/main/default/objects/Campaign_Member_Host__c/fields/Contact_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Contact_Record_Type__c</fullName>
    <description>Case#1168 - 11/2011 - Rudolf Niehaus
The record type of the contact that is linked to the campaign member</description>
    <label>Contact Record Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>