force-app/main/default/objects/Campaign_Member_Host__c/fields/Date_Responded__c.field-meta.xml
<CustomField>
    <fullName>Date_Responded__c</fullName>
    <description>Case#1168 - 03/2012 - Rudolf Niehaus</description>
    <label>Date Responded</label>
    <type>Date</type>
</CustomField>