force-app/main/default/objects/Campaign_Member_Host__c/fields/Member__c.field-meta.xml
<CustomField>
    <fullName>Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Case#1168 - 11/2011 - Rudolf Niehaus
Member (Client Contact) of the Campaign</description>
    <label>Member</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Campaign Member Hosts (Member)</relationshipLabel>
    <relationshipName>Campaign_Member_Hosts1</relationshipName>
    <type>Lookup</type>
</CustomField>