force-app/main/default/objects/Campaign_Member_Host__c/fields/Member_Host__c.field-meta.xml
<CustomField>
    <fullName>Member_Host__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Case#1168 - 11/2011 - Rudolf Niehaus
The host (Bank Contact)</description>
    <label>Member Host</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Campaign Member Hosts</relationshipLabel>
    <relationshipName>Campaign_Member_Hosts</relationshipName>
    <type>Lookup</type>
</CustomField>