force-app/main/default/objects/Campaign_Member_Host__c/fields/Member_Id__c.field-meta.xml
<CustomField>
    <fullName>Member_Id__c</fullName>
    <description>Case#1168 - Rudolf Niehaus - 11/2011
The rec ID of the campaign memeber</description>
    <label>Member Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>