force-app/main/default/objects/Campaign_Member_Host__c/fields/Member_Status__c.field-meta.xml
<CustomField>
    <fullName>Member_Status__c</fullName>
    <description>Case#1168 - 11/2011 - Rudolf Niehaus
Status field of the campaign memeber</description>
    <label>Member Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>