force-app/main/default/objects/Campaign_Member_Host__c/fields/Responded__c.field-meta.xml
<CustomField>
    <fullName>Responded__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Case#1168 - 03/2012 - Rudolf Niehaus</description>
    <label>Responded</label>
    <type>Checkbox</type>
</CustomField>